// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton Loader should match snapshot of dex skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "justifyContent": "center",
        "marginBottom": 8,
        "paddingBottom": 16,
        "paddingTop": 16,
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
  testID="dex_skeleton_loader"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={190}
    bbWidth="100%"
    focusable={false}
    height={190}
    interval={0.25}
    meetOrSlice={1}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 190,
          "width": "100%",
        },
      ]
    }
    vbHeight={190}
    vbWidth={328}
    width="100%"
  >
    <RNSVGGroup>
      <RNSVGRect
        clipPath="dex-animated-diff"
        fill={
          Array [
            1,
            "dex-diff",
          ]
        }
        height="100%"
        propList={
          Array [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
      <RNSVGDefs>
        <RNSVGClipPath
          name="dex-animated-diff"
        >
          <RNSVGCircle
            cx="30"
            cy="20"
            r="12"
          />
          <RNSVGRect
            height="16"
            rx="5"
            ry="5"
            width="110"
            x="60"
            y="13"
          />
          <RNSVGRect
            height="12"
            rx="4"
            ry="4"
            width="100"
            x="16"
            y="46"
          />
          <RNSVGRect
            height="14"
            rx="4"
            ry="4"
            width="60"
            x="16"
            y="64"
          />
          <RNSVGRect
            height="12"
            rx="4"
            ry="4"
            width="100"
            x="166"
            y="46"
          />
          <RNSVGRect
            height="14"
            rx="4"
            ry="4"
            width="60"
            x="166"
            y="64"
          />
          <RNSVGRect
            height="12"
            rx="4"
            ry="4"
            width="100"
            x="16"
            y="96"
          />
          <RNSVGRect
            height="14"
            rx="4"
            ry="4"
            width="60"
            x="16"
            y="114"
          />
          <RNSVGRect
            height="12"
            rx="4"
            ry="4"
            width="100"
            x="166"
            y="96"
          />
          <RNSVGRect
            height="14"
            rx="4"
            ry="4"
            width="60"
            x="166"
            y="114"
          />
          <RNSVGRect
            height="30"
            rx="4"
            ry="4"
            width="144"
            x="16"
            y="145"
          />
          <RNSVGRect
            height="30"
            rx="4"
            ry="4"
            width="80"
            x="168"
            y="145"
          />
          <RNSVGRect
            height="30"
            rx="4"
            ry="4"
            width="32"
            x="280"
            y="145"
          />
        </RNSVGClipPath>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -1250325,
              0.5,
              -1,
              1,
              -1250325,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="dex-diff"
          x1="-100%"
          x2="0%"
          y1={0}
          y2={0}
        />
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Skeleton Loader should match snapshot of loan skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-around",
        "marginLeft": 8,
        "marginRight": 8,
        "marginTop": 8,
        "paddingBottom": 4,
        "paddingTop": 4,
      },
      Object {
        "backgroundColor": "rgba(245, 245, 245, 1)",
      },
    ]
  }
  testID="loan_skeleton_loader"
>
  <View
    style={
      Array [
        Array [
          Object {
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
          },
          Object {
            "flexBasis": "47%",
          },
        ],
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderLeftWidth": 1,
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderRightWidth": 1,
          "borderTopColor": "rgba(229, 229, 229, 1)",
          "borderTopWidth": 1,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={144}
      bbWidth="100%"
      focusable={false}
      height={144}
      interval={0.25}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {},
          Object {
            "flex": 0,
            "height": 144,
            "width": "100%",
          },
        ]
      }
      vbHeight={144}
      vbWidth={163}
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGRect
          clipPath="loan-animated-diff"
          fill={
            Array [
              1,
              "loan-diff",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x="0"
          y="0"
        />
        <RNSVGDefs>
          <RNSVGClipPath
            name="loan-animated-diff"
          >
            <RNSVGRect
              height="14"
              rx="6"
              ry="6"
              width="90"
              x="48"
              y="24"
            />
            <RNSVGRect
              height="12"
              rx="5"
              ry="5"
              width="51"
              x="13"
              y="56"
            />
            <RNSVGRect
              height="12"
              rx="6"
              ry="6"
              width="96"
              x="13"
              y="75"
            />
            <RNSVGCircle
              cx="26"
              cy="31"
              r="13"
            />
            <RNSVGRect
              height="12"
              rx="6"
              ry="6"
              width="51"
              x="13"
              y="100"
            />
            <RNSVGRect
              height="12"
              rx="6"
              ry="6"
              width="96"
              x="13"
              y="118"
            />
          </RNSVGClipPath>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                -1250325,
                0.5,
                -1,
                1,
                -1250325,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="loan-diff"
            x1="-100%"
            x2="0%"
            y1={0}
            y2={0}
          />
        </RNSVGDefs>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Array [
        Array [
          Object {
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
          },
          Object {
            "flexBasis": "47%",
          },
        ],
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderLeftWidth": 1,
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderRightWidth": 1,
          "borderTopColor": "rgba(229, 229, 229, 1)",
          "borderTopWidth": 1,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={144}
      bbWidth="100%"
      focusable={false}
      height={144}
      interval={0.25}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {},
          Object {
            "flex": 0,
            "height": 144,
            "width": "100%",
          },
        ]
      }
      vbHeight={144}
      vbWidth={163}
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGRect
          clipPath="loan-animated-diff"
          fill={
            Array [
              1,
              "loan-diff",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x="0"
          y="0"
        />
        <RNSVGDefs>
          <RNSVGClipPath
            name="loan-animated-diff"
          >
            <RNSVGRect
              height="14"
              rx="6"
              ry="6"
              width="90"
              x="48"
              y="24"
            />
            <RNSVGRect
              height="12"
              rx="5"
              ry="5"
              width="51"
              x="13"
              y="56"
            />
            <RNSVGRect
              height="12"
              rx="6"
              ry="6"
              width="96"
              x="13"
              y="75"
            />
            <RNSVGCircle
              cx="26"
              cy="31"
              r="13"
            />
            <RNSVGRect
              height="12"
              rx="6"
              ry="6"
              width="51"
              x="13"
              y="100"
            />
            <RNSVGRect
              height="12"
              rx="6"
              ry="6"
              width="96"
              x="13"
              y="118"
            />
          </RNSVGClipPath>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                -1250325,
                0.5,
                -1,
                1,
                -1250325,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="loan-diff"
            x1="-100%"
            x2="0%"
            y1={0}
            y2={0}
          />
        </RNSVGDefs>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Skeleton Loader should match snapshot of mnemonic word skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
        "width": "100%",
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
  testID="mnemonic_word_skeleton_loader"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={47}
    bbWidth="100%"
    focusable={false}
    height={47}
    interval={0.25}
    meetOrSlice={1}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 47,
          "width": "100%",
        },
      ]
    }
    vbHeight={47}
    vbWidth={400}
    width="100%"
  >
    <RNSVGGroup>
      <RNSVGRect
        clipPath="mnemonic_word-animated-diff"
        fill={
          Array [
            1,
            "mnemonic_word-diff",
          ]
        }
        height="100%"
        propList={
          Array [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
      <RNSVGDefs>
        <RNSVGClipPath
          name="mnemonic_word-animated-diff"
        >
          <RNSVGRect
            height="33"
            rx="3"
            ry="3"
            width="290"
            x="70"
            y="3"
          />
          <RNSVGCircle
            cx="20"
            cy="20"
            matrix={
              Array [
                1,
                0,
                -0,
                1,
                20,
                0,
              ]
            }
            r="20"
          />
        </RNSVGClipPath>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -1250325,
              0.5,
              -1,
              1,
              -1250325,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="mnemonic_word-diff"
          x1="-100%"
          x2="0%"
          y1={0}
          y2={0}
        />
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Skeleton Loader should match snapshot of transaction skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
        "width": "100%",
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
  testID="transaction_skeleton_loader"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={47}
    bbWidth="100%"
    focusable={false}
    height={47}
    interval={0.25}
    meetOrSlice={1}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 47,
          "width": "100%",
        },
      ]
    }
    vbHeight={47}
    vbWidth={344}
    width="100%"
  >
    <RNSVGGroup>
      <RNSVGRect
        clipPath="transaction-animated-diff"
        fill={
          Array [
            1,
            "transaction-diff",
          ]
        }
        height="100%"
        propList={
          Array [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
      <RNSVGDefs>
        <RNSVGClipPath
          name="transaction-animated-diff"
        >
          <RNSVGCircle
            cx="17"
            cy="23"
            r="10"
          />
          <RNSVGRect
            height="15"
            width="100"
            x="44"
            y="7"
          />
          <RNSVGRect
            height="10"
            width="100"
            x="44"
            y="29"
          />
          <RNSVGRect
            height="15"
            width="85"
            x="250"
            y="16"
          />
        </RNSVGClipPath>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -1250325,
              0.5,
              -1,
              1,
              -1250325,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="transaction-diff"
          x1="-100%"
          x2="0%"
          y1={0}
          y2={0}
        />
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
